Fixed syllabus dashboard spacing and improved title alignment

--- a/public/css/syllabus.css
+++ b/public/css/syllabus.css
@@ -23,22 +23,22 @@
 
 .title-row{
 
-    display:flex;
-
-    justify-content:flex-start;
-
-    align-items:center;
-
     width:85%;
 
-    margin:10px auto 25px auto;
+    margin:0 auto 20px auto;
+
+    display:flex;
+
+    justify-content:space-between;
+
+    align-items:flex-start;
 }
 
 .title{
 
-    font-size:48px;
+    font-size:42px;
 
-    font-weight:800;
+    font-weight:700;
 
     line-height:1.2;
 
@@ -130,9 +130,9 @@
 
     margin:0;
 
-    font-size:10px;
+    font-size:18px;
 
-    font-weight:400;
+    font-weight:500;
 
     color:#111827;
 
@@ -423,4 +423,8 @@
 
         width:100%;
     }
+}
+
+.title-content{
+    max-width:850px;
 }
